--- a/The Mars Project/package.json
+++ b/The Mars Project/package.json
@@ -25,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/CodeRISHI/HR41-MVP/issues"
   },
-  "homepage": "https://github.com/CodeRISHI/HR41-MVP#readme"
+  "homepage": "https://github.com/CodeRISHI/HR41-MVP#readme",
+  "dependencies": {
+    "express": "^4.13.4",
+    "path": "^0.12.7"
+  }
 }
